# TravelAi

./: README.md
TravelAi/: .envrc.example  .eslintrc.cjs  .gitignore  CODEOWNERS  LICENSE  README.md  hardhat.config.js  package.json  turbo.json
TravelAi/.github/workflows/: build-docker.yml  ci.yml  deploy.yml
TravelAi/.husky/: pre-commit
TravelAi/TravelAi/: .env.example  README.md  hardhat.config.js  netlify.toml  package.json
TravelAi/TravelAi/api/routes/: capsules.ts  predictions.ts  timeline.ts
TravelAi/TravelAi/contracts/: TRAVELAI.sol  TimeCapsuleNFT.sol
TravelAi/TravelAi/frontend/src/: App.tsx
TravelAi/TravelAi/scripts/: airdrop.ts  deploy_evm.js  deploy_solana.ts
TravelAi/TravelAi/telegram-bot/: webhook.py
TravelAi/ai-engine/: main.py
TravelAi/anchor/: Anchor.toml  Cargo.toml
TravelAi/anchor/programs/time_traveler/: Cargo.toml
TravelAi/anchor/tests/: time_traveler.spec.ts
TravelAi/api/: index.ts
TravelAi/api/routes/: capsules.ts
TravelAi/apps/api/: package.json
TravelAi/apps/web/: package.json  tsconfig.json
TravelAi/contracts/: PredictionPool.sol  TRAVELAI.sol  TimeCapsuleNFT.sol  TimelineArchive.sol
TravelAi/docs/: terms.md
TravelAi/frontend/: index.tsx
TravelAi/frontend/src/: App.tsx
TravelAi/infra/: docker-compose.prod.yml
TravelAi/infra/docker/: api.Dockerfile  ml.Dockerfile  sdk.Dockerfile  web.Dockerfile
TravelAi/infra/postgres/: init.sql
TravelAi/scripts/: airdrop.ts  deploy_evm.js  deploy_solana.ts  snapshot.ts
TravelAi/services/ml/: pyproject.toml
TravelAi/solana/: Cargo.toml
TravelAi/solana/src/: lib.rs
TravelAi/telegram-bot/: bot.py  webhook.py
(+45 files in other folders)
